--- a/assets/sass/_core.scss
+++ b/assets/sass/_core.scss
@@ -729,7 +729,7 @@ h6 {font-size: 28px;}
     .inside {
       background: $primary;
       color: #FFF;
-      padding: 20px 2vw;
+      padding: 20px 2vw 30px;
       height: 100%;
       color: #FFF;
       font-size: 16px;
@@ -738,7 +738,7 @@ h6 {font-size: 28px;}
         margin-top: 25px;
         margin-bottom: 40px;
         padding: 0 1vw;
-        font-size: 15px;
+        font-size: 18px;
         line-height: 1.4;
       }
       @media screen and (max-width: 820px) {
@@ -758,16 +758,13 @@ h6 {font-size: 28px;}
       justify-content: center;
       a {
         display: block;
-        width: 150px;
+        width: 230px;
         background-size: cover;
         background-position: center;
         background-repeat: no-repeat;
         @media screen and (min-width:1600px) {
           // width: 13vw;
           width: 240px;
-        }
-        @media screen and (max-width: 992px) {
-          width: 200px;
         }
       }
       img.wp-post-image {
@@ -811,6 +808,14 @@ h6 {font-size: 28px;}
       }
     }
 
+    &.columns-3 {
+      li {
+        @media screen and (min-width:1600px) {
+          padding-left: 40px;
+          padding-right: 40px;
+        }
+      }
+    }
   }
 
   @media screen and (max-width:820px) {
