--- a/assets/sass/_core.scss
+++ b/assets/sass/_core.scss
@@ -1853,8 +1853,8 @@ div.checklist {
 }
 
 .repeatable-twocol-text-block {
-  justify-content: space-between;
-  align-items: center;
+  // justify-content: space-between;
+  // align-items: center;
   padding: 50px 20px;
   margin-bottom: 70px;
   @media screen and (min-width:1400px) {
@@ -1870,7 +1870,7 @@ div.checklist {
   }
   .flexwrap {
     flex-wrap: wrap;
-    align-items: center;
+    //align-items: center;
     justify-content: space-between;
   }
   &.half {
@@ -2417,6 +2417,148 @@ body.single-stories {
   }
   .wp-block-group__inner-container .wp-block-heading:first-child {
     margin-top: 0;
+  }
+}
+
+#primary.generic-layout {
+  .entry-content {
+    max-width: 1000px;
+    width: 100%;
+    margin: 0 auto;
+  }
+}
+
+.donation-form .section.recurring {
+  padding-left: 0!important;
+  [type="checkbox"] {
+    margin-right: 5px;
+  }
+}
+
+.field input[type="text"],
+.field input[type="tel"],
+.field input[type="email"],
+.field input[type="number"],
+.field select,
+.field textarea {
+  transition: all ease .3s;
+  &:focus {
+    outline: 0;
+    border:1px solid #81C674!important;
+    box-shadow: 0 1px 5px rgba(#81C674,50%);
+  }
+}
+#donation-form-container {
+  .section h3 {
+    width: 100%;
+    margin-bottom: 10px;
+  }
+  input[type="checkbox"] {
+    margin-right: 4px;
+  } 
+  .field input[type="text"],
+  .field input[type="tel"],
+  .field input[type="email"],
+  .field input[type="number"],
+  .field select {
+    border: 1px solid #5f5f5f;
+    border-radius: 0;
+    padding: 5px 10px;
+    height: 35px;
+    box-sizing: border-box;
+  }
+  .field textarea  {
+    border: 1px solid #5f5f5f;
+    border-radius: 0;
+    padding: 5px 10px;
+    height: 55px;
+    box-sizing: border-box;
+  }
+  .section.contact {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+    .field  {
+      width: 48.5%;
+      input {
+        max-width: 100%;
+        width: 100%;
+      }
+    }
+    // .field.first-name,
+    // .field.last-name {
+    //   width: 48.5%;
+    //   input {
+    //     max-width: 100%;
+    //     width: 100%;
+    //   }
+    // }
+  }
+  
+  .section.billing-address {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+    .field {
+      width: 48.5%;
+    }
+    .field input[type="text"],
+    .field input[type="tel"],
+    .field input[type="email"],
+    .field input[type="number"],
+    .field select,
+    .field textarea {
+      max-width: 100%;
+      width: 100%;
+    }
+    .field.state,
+    .field.zip-code {
+      width: 22.5%;
+      @media screen and (max-width: 960px) {
+        width: 48.5%;
+      }
+    }
+  }
+  
+  .section.payment {
+    [type="radio"] {
+      margin-right: 3px;
+    }
+  }
+
+  .section.captcha {
+    margin-top: 15px;
+    margin-bottom: 15px;
+  }
+
+  .field.payment #card-element {
+    border-radius: 6px;
+    padding: 10px;
+  }
+
+  .btn-group {
+    .btn-submit {
+      border: none;
+      background-color: $secondary;
+      letter-spacing: .04em;
+      text-transform: uppercase;
+      padding: 13px 35px 13px !important;
+      border-radius: 100px;
+      color: #FFF;
+      font-size: 17px;
+      font-weight: 600;
+      line-height: 1.2;
+      &:hover, &:focus {
+        background: #fcb405 !important;
+        box-shadow: 0 6px 20px rgba(0,0,0,.15);
+      }
+    }
+  }
+
+  @media screen and (max-width:500px) {
+    .field {
+      width: 100%!important;
+    }
   }
 }
 
