--- a/assets/sass/_core.scss
+++ b/assets/sass/_core.scss
@@ -310,6 +310,17 @@ body.home .wp-block-group.intro {
   padding-top: 40px!important;
   padding-bottom: 20px!important;
 }
+body.home .wp-block-cover.hero {
+  min-height: calc(100vh - 100px)!important;
+  video {
+    transform: scale(1.2);
+  }
+  // @media screen and (min-height:800px) {
+  //   video {
+  //     transform: scale(1.2);
+  //   }
+  // }
+}
 
 .rounded-images {
   padding-top: 50px;
@@ -2676,6 +2687,148 @@ body.single-post {
     }
     #single-post-widget {
       margin-top: 40px;
+    }
+  }
+}
+
+.feeds-wrapper {
+  @media screen and (min-width:1300px) {
+    margin-left: -10px;
+    margin-right: -10px;
+  }
+  ul.feeds {
+    margin: 0 0;
+    padding: 0 0;
+    list-style: none;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    li.feed {
+      width: 33.333%;
+      padding: 20px 1.7vw;
+      @media screen and (min-width:1300px) {
+        padding: 20px 2vw;
+      }
+      @media screen and (min-width:1500px) {
+        padding: 20px 2.3vw;
+      }
+      div.inside {
+        background: $primary;
+        height: 100%;
+        position: relative;
+        @media screen and (min-width:1300px) {
+          padding-bottom: 30px;
+        }
+      }
+      .text {
+        position: relative;
+        top: -44px;
+      }
+      .posttitle {
+        margin: 0 0;
+        padding: 20px 20px;
+        text-align: center;
+        display: block;
+        color: #FFF;
+        text-decoration: none;
+        font-size: 0.9rem;
+        line-height: 1.3;
+        position: relative;
+        @media screen and (min-width:1300px) {
+          font-size: 18px;
+          padding: 20px 45px;
+        }
+      }
+      .readmore {
+        display: block;
+        margin: 0 0;
+        text-align: center;
+        width: 100%;
+        position: absolute;
+        left: 0;
+        bottom: 25px;
+        .morelink {
+          display: inline-block;
+          border: none!important;
+          padding: 0!important;
+          text-decoration: underline;
+          font-size: 16px;
+          font-weight: 500;
+          line-height: 1.2;
+          position: relative;
+          color: #FFF;
+          padding-right: 15px!important;
+          &:after {
+            content:"";
+            display:inline-block;
+            width: 0;
+            height: 0;
+            border-left: 8px solid #FFF;
+            border-top: 5px solid transparent;
+            border-bottom: 5px solid transparent;
+            position: absolute;
+            top: 5px;
+            right: 0;
+            transition: transform ease .3s;
+          }
+          &:hover, &:focus {
+            color: $secondary!important;
+            &:after {
+              border-left-color: $secondary;
+              transform: translateX(5px);
+            }
+          }
+        }
+      }
+    }
+    figure {
+      margin: 0 0;
+      position: relative;
+      padding-left: 30px;
+      padding-right: 30px;
+      @media screen and (min-width:1100px) {
+        padding-left: 5vw;
+        padding-right: 5vw;
+      }
+      @media screen and (min-width:1300px) {
+        padding-left: 3.8vw;
+        padding-right: 3.8vw;
+      }
+      a {
+        display: block;
+        position: relative;
+      }
+      img {
+        width: 100%;
+        height: auto;
+        &.feat-image {
+          width: 100%;
+          height: 100%;
+          object-fit: cover;
+          object-position: center;
+          position: absolute;
+          top: 0;
+          left: 0;
+          z-index: 5;
+        }
+      }
+    }
+
+    @media screen and (max-width: 820px) {
+      li.feed {
+        width: 100%;
+        margin-bottom: 50px!important;
+        .posttitle {
+          font-size: 18px;
+        }
+        .inside {
+          padding-bottom: 13px;
+        }
+        figure {
+          padding-left: 10vw;
+          padding-right: 10vw;
+        }
+      }
     }
   }
 }
