--- a/assets/sass/_core.scss
+++ b/assets/sass/_core.scss
@@ -2883,6 +2883,138 @@ body.single-post {
   }
 }
 
+body.post-type-archive-tribe_events {
+  .tribe-events-header__breadcrumbs  {
+    display: none;
+  }
+}
 
+.tribe-events #legend_box {
+  visibility: hidden;
+}
 
-
+.tribe-events-c-events-bar {
+  .resetLink {
+    display: inline-flex;
+    text-decoration: underline !important;
+    color: #f26522 !important;
+    position: relative;
+    top: 0;
+    padding: 0 10px;
+    margin: 0 5px;
+    font-size: 15px;
+    font-weight: 500;
+    height: 35px;
+    box-sizing: border-box;
+    line-height: 1;
+    align-items: center;
+    &:hover, &:focus {
+      text-decoration: none!important;
+    }
+    &:focus {
+      outline: 1px dotted $secondary;
+    }
+  }
+  .event-category-dropdown {
+    display: inline-block;
+    position: relative;
+    width: 215px;
+    margin-right: 15px;
+    .selectBox {
+      display: inline-flex;
+      align-items: center;
+      text-align: center;
+      border: 1px solid #606060;
+      color: #000;
+      padding: 10px 12px;
+      width: 100%;
+      height: 35px;
+      font-size: 14px;
+      line-height: 1;
+      position: relative;
+      appearance: none;
+      border-radius: 0;
+      box-shadow: none;
+      &:after {
+        content: "";
+        display: block;
+        width: 0;
+        height: 0;
+        border-top: 6px solid #939393;
+        border-left: 5px solid transparent;
+        border-right: 5px solid transparent;
+        position: absolute;
+        top: 14px;
+        right: 13px;
+        transition: transform ease .4s;
+      } 
+      &.open {
+        &:after {
+          transform: rotate(180deg);
+        }
+      }
+    }
+    
+    #legend_box {
+      visibility: visible;
+      position: absolute;
+      top: 34px;
+      right: 0;
+      background: #FFF;
+      border: 1px solid #606060;
+      padding: 2px 4px;
+      width: 215px;
+      display: none;
+      ul {
+        margin: 0 0!important;
+        overflow: hidden;
+      }
+      ul, li {
+        width: 100%;
+      }
+      li {
+        margin: 3px 0!important;
+        padding: 0 0!important;
+        a {
+          display: block;
+          background: #FFF;
+          padding: 8px 8px!important;
+          color: #000;
+          position: relative;
+          left: 8px;
+          text-align: left;
+          font-size: 15px;
+          font-weight: normal;
+          line-height: 1.2;
+          border-bottom: 1px solid #CCC;
+        }
+        &.active a {
+          color: #FFF;
+          background-color: transparent;
+          border-bottom: none;
+        }
+        &.teccc-reset.active {
+          a {
+            color: #000!important;
+          }
+        }
+      }
+      li:not(.teccc-reset):hover a {
+        left: 15px;
+      }
+      li.teccc-reset a {
+        left: 0 !important;
+        border-bottom: none !important;
+        color: #e35613;
+        text-align: center;
+        padding: 5px 0!important;
+      }
+      li.teccc-reset {
+        display: none!important;
+      }
+      #legend li.last a {
+        border-bottom: none!important;
+      }
+    }
+  }
+}
