--- a/assets/sass/_core.scss
+++ b/assets/sass/_core.scss
@@ -2026,6 +2026,122 @@ div.checklist {
 
 }
 
+.repeatable.timeline-left {
+  .textLeft {
+    position: relative;
+    hr {
+      opacity: 0;
+      margin: 0 0!important;
+      padding: 0 0!important;
+      height: 1px!important;
+    }
+  }
+}
+.repeatable.timeline-right {
+  .textRight {
+    position: relative;
+    hr {
+      opacity: 0;
+      margin: 0 0!important;
+      padding: 0 0!important;
+      height: 1px!important;
+    }
+  }
+}
+
+[class*="timeline-"].repeatable {
+  .wrapper {
+    padding: 30px;
+    @media screen and (min-width: 1300px) {
+      padding: 6vw 5vw;
+    }
+    h3 {
+      margin-top: 0;
+    }
+  }
+}
+
+.TIMELINE_INFO {
+  display: flex;
+  flex-wrap: wrap;
+  align-items: center;
+  justify-content: space-between;
+  padding: 10px 0;
+  position: relative;
+  &:before {
+    content:"";
+    display: block;
+    width: 1px;
+    height: 100%;
+    background: #FFF;
+    position: absolute;
+    top: 0;
+    left: 50%;
+    transform: translateX(-50%);
+  }
+  &:after {
+    content:"";
+    display: block;
+    width: 15px;
+    height: 15px;
+    background: #FFF;
+    border-radius: 100px;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translateX(-50%) translateY(-50%);
+  }
+  &:first-child {
+    padding-top: 0;
+  }
+  &:last-child {
+    padding-bottom: 0;
+  }
+  .imageCol, .textCol {
+    width: 45%;
+    position: relative;
+    z-index: 10;
+  } 
+  .imageCol {
+    img {
+      width: 100%;
+      height: auto;
+      float: left;
+    }
+  }
+  .textCol {
+    strong {
+      font-size: 20px;
+    }
+    p {
+      margin-bottom: 0;
+      margin-top: 15px;
+    }
+    p:first-child {
+      margin-top: 0;
+    }
+  }
+
+  &:nth-child(even) {
+    flex-direction: row-reverse;
+    .textCol {
+      text-align: right;
+    }
+  }
+
+  // @media screen and (min-width:961px) {
+  //   &:nth-child(even) {
+  //     flex-direction: row-reverse;
+  //     .textCol {
+  //       text-align: right;
+  //     }
+  //   }
+  // }
+
+}
+
+
+
 body.page-id-477 {
   .repeatable-twocol-text-block {
     margin-bottom: 0;
